<resources>

    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="cnf_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="client_code">Client Code</string>

    <string name="nav_drawer_open">Open Nav Drawer</string>
    <string name="nav_drawer_close">Close Nav Drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_do_not_have_an_account">Don\'t have an account? Sign up</string>
    <string name="str_already_have_an_account">Already have an account? Sign in</string>

    <string name="create_organisation">Create Organisation</string>
    <string name="add_stores">Add Stores</string>
    <string name="add_products">Add Products</string>
    <string name="str_clear_all">Clear All</string>

    <string name="str_username">Username</string>
    <string name="str_shop_management">Shop Management</string>
    <string name="str_general_settings">General Settings</string>
    <string name="str_delivery_areas">Delivery Areas</string>
    <string name="str_product_management">Product Management</string>
    <string name="str_products">Products</string>
    <string name="str_categories">Categories</string>
    <string name="stores">Stores</string>
    <string name="categories_products">Categories &amp; products</string>
    <string name="orderResponses">Orders</string>
    <string name="reports">Reports</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>

    <string-array name="store_type_array">
        <item>Single store</item>
        <item>Chain</item>
    </string-array>

    <string-array name="login_type_array">
        <item>Main Account</item>
        <item>Client Account</item>
    </string-array>

    <string-array name="business_type_array">
        <item>Restaurant</item>
        <item>Grocery</item>
        <item>Fruits &amp; Veg</item>
        <item>Pharmacy</item>
        <item>Other</item>
    </string-array>

    <string-array name="yes_no_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="err_enter_org_name">Please enter organisation name.</string>
    <string name="err_enter_store_type">Please enter store type.</string>
    <string name="err_enter_business_type">Please enter business type.</string>
    <string name="err_add_address">Please add address.</string>
    <string name="err_enter_gst_no">Please enter GST number.</string>

    <string name="err_enter_store_name">Please enter store name.</string>

    <string name="err_enter_product_name">Please enter product name.</string>
    <string name="err_enter_price">Please enter price.</string>
    <string name="err_enter_original_price">Please enter original price.</string>
    <string name="err_enter_description">Please enter description.</string>
    <string name="err_enter_quantity">Please enter quantity.</string>

    <string name="err_enter_category_name">Please enter category name.</string>
    <string name="err_enter_sub_category_name">Please enter sub category name.</string>
    <string name="err_enter_is_active">Please enter is active field.</string>

    <string name="str_organisation_info">Organisation info</string>
    <string name="str_organisation_name">Organisation Name</string>
    <string name="str_store_type">Store Type :</string>
    <string name="str_location">Location:</string>
    <string name="str_locate_me">Locate Me</string>
    <string name="str_business_type">Business Type :</string>
    <string name="str_gst_number">GST Number</string>
    <string name="str_create_organisation">Create Organisation</string>
    <string name="str_locating">Locating…</string>
    <string name="str_address_line_1">Address line 1</string>
    <string name="str_address_line_2">Address line 2</string>
    <string name="str_landmark">Landmark</string>
    <string name="str_add_address">Add Address</string>
    <string name="str_store_info">Store info</string>
    <string name="str_store_name">Store Name</string>
    <string name="str_create_store">Create Store</string>
    <string name="str_product_info">Product info</string>
    <string name="str_product_name">Product Name</string>
    <string name="str_variant_name">Variant Name</string>
    <string name="str_price">Price</string>
    <string name="str_original_price">Original Price</string>
    <string name="str_description">Description</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_in_stock">In Stock?</string>
    <string name="str_show_advanced_options">Show Advanced Options</string>
    <string name="str_show_advanced_inventory">Show Advanced Inventory</string>
    <string name="str_create_product">Create Product</string>
    <string name="str_no_records_found">No records found.</string>
    <string name="category_info">Category info</string>
    <string name="category_name">Category name</string>
    <string name="product_name">Product name</string>
    <string name="discount_code">Discount code</string>
    <string name="customer">Customer</string>
    <string name="variant_name">Variant name</string>
    <string name="date">Date</string>
    <string name="is_active">Is Active?</string>
    <string name="is_available">Is Available?</string>
    <string name="sub_category_info">Sub Category Info</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="create_sub_category">Create Sub Category</string>
    <string name="save_category">Save category</string>
    <string name="create_category">Create category</string>
    <string name="save_store">Save store</string>
    <string name="apply_filters">Apply filters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loading">Loading...</string>
    <string name="enter_all_details">Please enter all user details before proceeding.</string>
    <string name="confirm_password_correctly">Conform your password correctly before proceeding.</string>
    <string name="account">Account</string>
    <string name="store_name">Store name</string>
    <string name="store_address">Store address</string>
    <string name="summary">Summary</string>
    <string name="store_details">Store details</string>
    <string name="quantity_label">Quantity:</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="support_variants">Support variants</string>
    <string name="save_to_view_more_options">Save to view more options</string>
    <string name="sku">SKU</string>
    <string name="save_product">Save product</string>
    <string name="dummy_price">Rs 10.00</string>
    <string name="attribute_name">Attribute name</string>
    <string name="attribute_value_name">Value</string>
    <string name="value">Value</string>
    <string name="save_variant">Save variant</string>
    <string name="add_attributes">Add attributes</string>
    <string name="plus">+</string>
    <string name="edit_category">Edit category</string>
    <string name="categories">Categories</string>
    <string name="discounts">Discounts</string>
    <string name="order_details">Order details</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="variants">Variants</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="tax">tax</string>
    <string name="quantity">Quantity</string>
    <string name="add_store">Add store</string>
    <string name="edit_store">Edit store</string>
    <string name="order_status">Order status</string>
    <string name="payment_details">Payment details</string>
    <string name="qty">Qty</string>
    <string name="ordered">Ordered</string>
    <string name="delivered">Delivered</string>
    <string name="count">Count</string>
    <string name="dummy_zero_price">Rs 0.00</string>
    <string name="filters">Filters</string>
    <string name="last_order">Last order</string>

    <!-- Progress string -->
    <string name="progress_please_wait">Please wait</string>

    <string name="collection_payment">COLLECT PAYMENT</string>
    <string name="update_order_status">UPDATE ORDER STATUS</string>
    <string name="get_borzo_estimate">GET BORZO ESTIMATE</string>
    <string name="product_order_report">Product order report</string>
    <string name="orders_over_time_report">Orders over time report</string>
    <string name="customer_acquisition_report">Customer acquisition report</string>
    <string name="customer_order_report">Customer order report</string>
    <string name="str_choose_image">Choose image from?</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_camera">Camera</string>
    <string name="reports_and_statistics_coming_soon">Reports and statistics coming soon!</string>
    <string name="upload_file">Upload file</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="categories_data_upload_success">Categories and product data uploaded successfully.</string>

</resources>