<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/str_shop_management">
        <menu>
            <item
                android:id="@+id/nav_item_general_settings"
                android:title="@string/str_general_settings" />
            <item
                android:id="@+id/nav_item_delivery_areas"
                android:title="@string/str_delivery_areas" />

        </menu>
    </item>

    <item android:title="@string/str_product_management">
        <menu>
            <item
                android:id="@+id/nav_item_six"
                android:title="@string/str_products" />
            <item
                android:id="@+id/nav_item_seven"
                android:title="@string/str_categories" />
        </menu>
    </item>
</menu>
