<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ui.fragment.HomeFragment">

    <Button
        android:id="@+id/btn_create_org"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_red_button_num_1"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        android:text="@string/create_organisation"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_add_stores"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_red_button_num_2"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        android:text="@string/add_stores"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_add_products"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_red_button_num_3"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        android:text="@string/add_products"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/str_clear_all"
        android:textColor="@color/white" />

</LinearLayout>