<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="4dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:id="@+id/ll_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginEnd="@dimen/padding_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_variant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variant_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ordered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/padding_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ordered_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_ordered_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_zero_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delivered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_delivered_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_delivered_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_zero_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
    </LinearLayout>

</LinearLayout>