<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="4dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/tv_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/ll_ordered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/padding_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_ordered_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_zero_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_last_ordered_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dummy_zero_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/grey" />

</LinearLayout>