<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProductOrderReportActivity">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_below="@id/titleBar"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/ll_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_variant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variant_name"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ordered_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ordered"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_delivered_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivered"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:id="@+id/v_heading_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/ll_heading"
        android:background="@color/dark_grey"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_order_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_heading_divider"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/ll_no_records_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_no_records_found"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/grey_add_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_no_records_found"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>