<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.StoreActivity">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_product_order_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:fontFamily="@font/opensans_medium"
        android:padding="16dp"
        android:text="@string/product_order_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:id="@+id/v_product_order_report"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_product_order_report"
        android:background="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_orders_over_time_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_product_order_report"
        android:fontFamily="@font/opensans_medium"
        android:padding="16dp"
        android:text="@string/orders_over_time_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:id="@+id/v_orders_over_time_report"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_orders_over_time_report"
        android:background="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_customer_acquisition_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_orders_over_time_report"
        android:fontFamily="@font/opensans_medium"
        android:padding="16dp"
        android:text="@string/customer_acquisition_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:id="@+id/v_customer_acquisition_report"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_customer_acquisition_report"
        android:background="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_customer_order_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_customer_acquisition_report"
        android:fontFamily="@font/opensans_medium"
        android:padding="16dp"
        android:text="@string/customer_order_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:id="@+id/v_customer_order_report"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_customer_order_report"
        android:background="@color/dark_grey" />

</RelativeLayout>